--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr>
     <a href="./public/movie-ranking.html">Movie Ranking Project<br><img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"></a><br>
     <a href="./public/birthday-invite.html">Birthday Invite Project<br><img src="./assets/images/birthday-invite.png" height="200" alt="birthday-invite project preview"></a><br>
-    <a href="../4.1 Webpages/index.html">Webpage Project<br><img src="./assets/images/webpage.png" height="200" alt="webpage project preview"></a>
+    <a href="./4.1 Webpages/index.html">Webpage Project<br><img src="./assets/images/webpage.png" height="200" alt="webpage project preview"></a>
     <hr>
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact</a>
